fix: ensure footer has light blue background - Add !important to footer background - Add background color to all footer elements - Add z-index to ensure footer stays on top

--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -2,9 +2,12 @@
 @import "../../../assets/sass/base";
 
 .footer {
-    background-color: #78aafa;
+    background-color: #78aafa !important;
     width: 100%;
     padding: 2rem 0;
+    margin: 0;
+    position: relative;
+    z-index: 1;
 
     &__row {
         max-width: 1200px;
@@ -12,10 +15,12 @@
         display: flex;
         justify-content: space-between;
         padding: 0 2rem;
+        background-color: #78aafa;
     }
 
     &__col {
         padding: 0 1rem;
+        background-color: #78aafa;
     }
 
     &__logo {
@@ -45,6 +50,7 @@
 
         &__item {
             margin-bottom: 1rem;
+            background-color: #78aafa;
 
             &-link {
                 color: #0A1929;
